Feature/issue 146 image in url (#147)
Added options masterImage and workerImage to select images in the request
